03-auto-deploy-monitoring-logging/monitoring_and_logging/template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create a basic EC2 instance with SSH instance
Resources:
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22 and port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9093
          ToPort: 9093
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: udacity_demo_test
      ImageId: 'ami-0574da719dca65348'
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: '/dev/sdk'
          Ebs:
            VolumeSize: 5
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-UdaDemo'
        - Key: Purpose
          Value: WebServerGroup
        - Key: Project
          Value: Udacity

Outputs:
  EC2InstancePublicIp:
    Description: A reference to the created EC2 Instance PublicIP
    Value: !GetAtt EC2Instance.PublicIp
    Export:
      Name: !Sub '${AWS::StackName}-EC2-PublicIp'

  EC2InstancePublicUrl:
    Description: A reference to the created EC2 Instance PublicIP
    Value: !Join ['', ['http://', !GetAtt EC2Instance.PublicIp, ':9090']]
    Export:
      Name: !Sub '${AWS::StackName}-EC2-PublicIpUrl'

  EC2InstancePublicDnsName:
    Description: A reference to the created EC2 Instance PublicDNSName
    Value: !Join ['', ['http://', !GetAtt EC2Instance.PublicDnsName]]
    Export:
      Name: !Sub '${AWS::StackName}-EC2-PublicDNSName'
